--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://CasperNaudts.github.io/CasperNaudts.github.io",
   "dependencies": {
     "@fluentui/react": "^7.105.13",
-    "@types/react": "^16.9.32",
+    "@types/react": "^16.9.33",
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.3",
     "node-sass": "^4.13.1",
+    "office-ui-fabric-core": "^11.0.0",
+    "office-ui-fabric-react": "^7.105.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-wordcloud": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
