--- a/.github/workflows/master_deploy.yml
+++ b/.github/workflows/master_deploy.yml
@@ -5,18 +5,17 @@ on:
       - master
 jobs:
   build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [12.x]
+    runs-on: ubuntu-latest 
     steps:
     - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 12.x
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 12.x
     - name: Install Packages
       run: npm install
+    - name: Configure Git
+      run: git config --global user.email "11700626@student.pxl.be" && git config --global user.name "Casper"
     - name: Deploy to GH Pages
       run: npm run deploy
     - name: Updating Domain
