--- a/.github/workflows/master_deploy.yml
+++ b/.github/workflows/master_deploy.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Install Packages
       run: npm install
     - name: Configure Git
-      run: git config --global user.email "11700626@student.pxl.be" && git config --global user.name "Casper"
+      run: git config --global user.email "casper.naudts@student.pxl.be" && git config --global user.name "Casper"
     - name: Deploy to GH Pages
       run: npm run deploy
     - name: Updating Domain
